examples/kju/positive/structs/struct_read_write.kju
fun write(a: Int): Unit import

struct A {
	x:Int;
}

fun kju():Unit{
	var a : A = new(A);
	a.x = 5;
	write(a.x);	
}