examples/kju/negative/structs/field_to_array.kju
struct A
{
    val : Int;
}

fun kju() : Unit
{
    var a : A = new (A);
    a.val[5][5] = 0;
    a.val[5] = 0;
}